fixed bug of the about me animation page. added flex-wrap into skill images

--- a/src/app/(components)/Aboutme/AboutmePage.module.css
+++ b/src/app/(components)/Aboutme/AboutmePage.module.css
@@ -91,4 +91,9 @@
     margin-top: 3rem;
     margin-bottom: 2rem;
   }
+  .imageLayout{
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 80%;
+  }
 }
